burger nav display block fixed (with visibility)

--- a/src/scss/sections/header/_nav.scss
+++ b/src/scss/sections/header/_nav.scss
@@ -3,7 +3,7 @@
 	position: absolute;
 	top: $navbar__height;
 	left: 0;
-	
+	visibility: hidden;
     width: 100%;
     height: 100vh;
 	
@@ -11,11 +11,11 @@
 
 	opacity: 0;
 	will-change: opacity;
-	transition: $nav__mobile--active;
+	transition: $nav__mobile--active, visibility 0s 0.35s;;
 
 	@include laptop {
 		position: static;
-		
+		visibility: visible;
 		width: auto;
 		height: auto;
 		
@@ -27,17 +27,16 @@
 }
 
 .js-navbar__burger--active .nav {
+	visibility: visible;
 	color: $navbar__color--primary;
-	
 	opacity: 1;
+	transition: $nav__mobile--active;
 }
 
 .nav__list {
-    display: none;
+    display: flex;
 	flex-direction: column;
-	
 	@include laptop {
-		display: flex;
 		flex-direction: row;
 	}
 }
